--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 firmware/GyverDrink_VICLER_MOD_StepMot/.vscode/c_cpp_properties.json
 firmware/OLD
 schemes/Der_Nalivator_Schematics.psd
+schemes/Der_Nalivator_Schematics.png
