--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ firmware/OLD
 schemes/Der_Nalivator_Schematics.psd
 schemes/Der_Nalivator_Schematics_v2.psd
 schemes/Components
+firmware/GyverDrink_VICLER_MOD_7.6.zip
